examples/bad/static_error_array_type_mismatch2.ps
[int] arr = [1, 2];
arr = arr + [true];